--- a/contact_html.css
+++ b/contact_html.css
@@ -44,7 +44,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:35px; left:256px;  }
 .menustyle5 { position:absolute; width:97px; height:35px; left:401px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:1px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
 #container_14de6854 { vertical-align: top; position:relative; display: inline-block; width:90%; background:none;  }
 #container_14de6854_padding { margin: 10px; display: block;  }
 #container_28787caa { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
@@ -66,6 +66,6 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 #cell_40c8368a {  }
 #img_445fda0d { vertical-align: bottom; position:relative; display: inline-block; width:14%; background:none; height:auto;  }
 #cell_50cb666a {  }
-#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; background:none; height:auto;  }
+#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; min-width:5px; background:none; height:auto;  }
 #cell_b749fb5 {  }
-#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; background:none; height:auto;  }
+#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; min-width:10px; background:none; height:auto;  }
