--- a/index_html.css
+++ b/index_html.css
@@ -44,15 +44,15 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:35px; left:256px;  }
 .menustyle5 { position:absolute; width:97px; height:35px; left:401px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
-#container_62a35519 { vertical-align: top; position:relative; display: inline-block; width:90%; background:none;  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:1px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#container_62a35519 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:1px; background:none;  }
 #container_62a35519_padding { margin: 10px; display: block;  }
-#container_52a9ad69 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_52a9ad69 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:1px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 .textstyle7 { font-size:18pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 .textstyle8 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; font-weight:bold; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-#container_381e378b { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_381e378b { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:1px; background:none;  }
 #container_381e378b_padding { margin: 5px; display: block;  }
-#container_235882ac { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_235882ac { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:1px; background:none;  }
 .textstyle9 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
 .textstyle10 { font-size:16pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 .ulstyle1 { margin:0; font-size: 16pt; color:#FFFFFF;  }
@@ -68,9 +68,9 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .textstyle17 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle18 { font-size:16pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 #cell_50cb666a {  }
-#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; background:none; height:auto;  }
+#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; min-width:5px; background:none; height:auto;  }
 #cell_b749fb5 {  }
-#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; background:none; height:auto;  }
+#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; min-width:10px; background:none; height:auto;  }
 @media only screen and (max-width: 800px)
 {
 		#container_235882ac { width:100%;  }
