--- a/media_html.css
+++ b/media_html.css
@@ -62,7 +62,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:35px; left:256px;  }
 .menustyle5 { position:absolute; width:97px; height:35px; left:401px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:1px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
 #container_d7f7436 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:607px; background:none;  }
 #container_d7f7436_padding { margin: 10px; display: block;  }
 #container_7446523 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:571px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
@@ -92,6 +92,6 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle11 { font-size:16pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 #cell_50cb666a {  }
-#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; background:none; height:auto;  }
+#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; min-width:5px; background:none; height:auto;  }
 #cell_b749fb5 {  }
-#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; background:none; height:auto;  }
+#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; min-width:10px; background:none; height:auto;  }
